--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2"
   }
 }
